2017.9/_sources/plugins/available/diversity/core-metrics-phylogenetic.txt
core-metrics-phylogenetic: Core diversity metrics (phylogenetic and non-phylogenetic)
=====================================================================================

.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <pre>Usage: qiime diversity core-metrics-phylogenetic [OPTIONS]

     Applies a collection of diversity metrics (both phylogenetic and non-
     phylogenetic) to a feature table.

   Options:
     --i-table PATH                  Artifact: FeatureTable[Frequency]
                                     [required]
                                     The feature table containing the
                                     samples over which diversity metrics should
                                     be computed.
     --i-phylogeny PATH              Artifact: Phylogeny[Rooted]  [required]
                                     Phylogenetic tree containing tip identifiers
                                     that correspond to the feature identifiers
                                     in the table. This tree can contain tip ids
                                     that are not present in the table, but all
                                     feature ids in the table must be present in
                                     this tree.
     --p-sampling-depth INTEGER      [required]
                                     The total frequency that each
                                     sample should be rarefied to prior to
                                     computing diversity metrics.
     --p-n-jobs INTEGER              [default: 1]
                                     [beta/beta-phylogenetic methods
                                     only, excluding weighted_unifrac] - The
                                     number of jobs to use for the computation.
                                     This works by breaking down the pairwise
                                     matrix into n_jobs even slices and computing
                                     them in parallel. If -1 all CPUs are used.
                                     If 1 is given, no parallel computing code is
                                     used at all, which is useful for debugging.
                                     For n_jobs below -1, (n_cpus + 1 + n_jobs)
                                     are used. Thus for n_jobs = -2, all CPUs but
                                     one are used. (Description from
                                     sklearn.metrics.pairwise_distances)
     --o-rarefied-table PATH         Artifact: FeatureTable[Frequency] [required
                                     if not passing --output-dir]
                                     The resulting
                                     rarefied feature table.
     --o-faith-pd-vector PATH        Artifact: SampleData[AlphaDiversity]
                                     [required if not passing --output-dir]
                                     Vector of Faith PD values by sample.
     --o-observed-otus-vector PATH   Artifact: SampleData[AlphaDiversity]
                                     [required if not passing --output-dir]
                                     Vector of Observed OTUs values by sample.
     --o-shannon-vector PATH         Artifact: SampleData[AlphaDiversity]
                                     [required if not passing --output-dir]
                                     Vector of Shannon diversity values by
                                     sample.
     --o-evenness-vector PATH        Artifact: SampleData[AlphaDiversity]
                                     [required if not passing --output-dir]
                                     Vector of Pielou's evenness values by
                                     sample.
     --o-unweighted-unifrac-distance-matrix PATH
                                     Artifact: DistanceMatrix [required if not
                                     passing --output-dir]
                                     Matrix of unweighted
                                     UniFrac distances between pairs of samples.
     --o-weighted-unifrac-distance-matrix PATH
                                     Artifact: DistanceMatrix [required if not
                                     passing --output-dir]
                                     Matrix of weighted
                                     UniFrac distances between pairs of samples.
     --o-jaccard-distance-matrix PATH
                                     Artifact: DistanceMatrix [required if not
                                     passing --output-dir]
                                     Matrix of Jaccard
                                     distances between pairs of samples.
     --o-bray-curtis-distance-matrix PATH
                                     Artifact: DistanceMatrix [required if not
                                     passing --output-dir]
                                     Matrix of Bray-Curtis
                                     distances between pairs of samples.
     --o-unweighted-unifrac-pcoa-results PATH
                                     Artifact: PCoAResults [required if not
                                     passing --output-dir]
                                     PCoA matrix computed
                                     from unweighted UniFrac distances between
                                     samples.
     --o-weighted-unifrac-pcoa-results PATH
                                     Artifact: PCoAResults [required if not
                                     passing --output-dir]
                                     PCoA matrix computed
                                     from weighted UniFrac distances between
                                     samples.
     --o-jaccard-pcoa-results PATH   Artifact: PCoAResults [required if not
                                     passing --output-dir]
                                     PCoA matrix computed
                                     from Jaccard distances between samples.
     --o-bray-curtis-pcoa-results PATH
                                     Artifact: PCoAResults [required if not
                                     passing --output-dir]
                                     PCoA matrix computed
                                     from Bray-Curtis distances between samples.
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
         <pre>Core diversity metrics (phylogenetic and non-phylogenetic)

   Applies a collection of diversity metrics (both phylogenetic and non-
   phylogenetic) to a feature table.

   Parameters
   ----------
   table : FeatureTable[Frequency]
       The feature table containing the samples over which diversity metrics
       should be computed.
   phylogeny : Phylogeny[Rooted]
       Phylogenetic tree containing tip identifiers that correspond to the
       feature identifiers in the table. This tree can contain tip ids that
       are not present in the table, but all feature ids in the table must be
       present in this tree.
   sampling_depth : Int
       The total frequency that each sample should be rarefied to prior to
       computing diversity metrics.
   n_jobs : Int, optional
       [beta/beta-phylogenetic methods only, excluding weighted_unifrac] - The
       number of jobs to use for the computation. This works by breaking down
       the pairwise matrix into n_jobs even slices and computing them in
       parallel. If -1 all CPUs are used. If 1 is given, no parallel computing
       code is used at all, which is useful for debugging. For n_jobs below
       -1, (n_cpus + 1 + n_jobs) are used. Thus for n_jobs = -2, all CPUs but
       one are used. (Description from sklearn.metrics.pairwise_distances)

   Returns
   -------
   rarefied_table : FeatureTable[Frequency]
       The resulting rarefied feature table.
   faith_pd_vector : SampleData[AlphaDiversity]
       Vector of Faith PD values by sample.
   observed_otus_vector : SampleData[AlphaDiversity]
       Vector of Observed OTUs values by sample.
   shannon_vector : SampleData[AlphaDiversity]
       Vector of Shannon diversity values by sample.
   evenness_vector : SampleData[AlphaDiversity]
       Vector of Pielou's evenness values by sample.
   unweighted_unifrac_distance_matrix : DistanceMatrix
       Matrix of unweighted UniFrac distances between pairs of samples.
   weighted_unifrac_distance_matrix : DistanceMatrix
       Matrix of weighted UniFrac distances between pairs of samples.
   jaccard_distance_matrix : DistanceMatrix
       Matrix of Jaccard distances between pairs of samples.
   bray_curtis_distance_matrix : DistanceMatrix
       Matrix of Bray-Curtis distances between pairs of samples.
   unweighted_unifrac_pcoa_results : PCoAResults
       PCoA matrix computed from unweighted UniFrac distances between samples.
   weighted_unifrac_pcoa_results : PCoAResults
       PCoA matrix computed from weighted UniFrac distances between samples.
   jaccard_pcoa_results : PCoAResults
       PCoA matrix computed from Jaccard distances between samples.
   bray_curtis_pcoa_results : PCoAResults
       PCoA matrix computed from Bray-Curtis distances between samples.</pre>
       </div>
     </div>
   </div>